FreedomSanboxAntDeploy/src/objects/Checklist__c.object
<CustomObject>
    <fields>
        <fullName>Checklist_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Template</label>
        <referenceTo>Checklist_Template__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Steps__c</fullName>
        <label>Completed Steps</label>
        <summaryFilterItems>
            <field>Checklist_Step__c.Step_Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Checklist_Step__c.Checklist__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <picklist>
            <controllingField>Stage__c</controllingField>
            <picklistValues>
                <fullName>Prospecting-Initation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educating Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement-Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement-Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment-Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data-Collection-Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Over stretching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Reivew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Creation-Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DraftPlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidated Account Statement Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adhoc/ Periodic requirement from the internel team for analysis purpose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual client meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment-send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Agreement-signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason of Leaving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Comments__c</fullName>
        <label>Description Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent_Complete__c</fullName>
        <formula>Completed_Steps__c /Total_Steps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percent_Pending__c</fullName>
        <formula>Steps_not_completed__c / Total_Steps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percent Pending</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_Total__c</fullName>
        <formula>Percent_Complete__c + Percent_Pending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Percentage Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <formula>IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 15, (Percent_Complete__c*100))&amp;
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 15, 
( Percent_Pending__c *100))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will-Join-Later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data-Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Reviewing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steps_not_completed__c</fullName>
        <description>No. of steps not completed</description>
        <label>Steps not completed</label>
        <summaryFilterItems>
            <field>Checklist_Step__c.Step_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Checklist_Step__c.Checklist__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Steps__c</fullName>
        <description>Total number of Checklist Step</description>
        <label>Total Steps</label>
        <summaryForeignKey>Checklist_Step__c.Checklist__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Checklist</label>
    <nameField>
        <displayFormat>CL-{00000000}</displayFormat>
        <label>Checklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>